# SoT-Cooking-Timer

./: .gitignore  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
assets/: icon.icns
electron/: main.js
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/scripts/: audio.ts  background.ts  storage.ts  timer.ts
