[package]
name = "sot-cooking-timer"
version = "1.0.0"
description = "A simple Sea of Thieves cooking timer"
authors = ["Xeyo (wojciechfirmowe@wp.pl)"]
edition = "2024"

[lib]
name = "sot_cooking_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
